--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <link
       rel="icon"
       type="image/png"
-      href="https://res.cloudinary.com/djzp2k8gd/image/upload/v1713742710/leads_landing/byr7ym2w12ypqheuxl0b.png"
+      href="https://res.cloudinary.com/djzp2k8gd/image/upload/v1714055816/drone_landing/logo/zl3kehgakmqi9icgnb6o.png"
     />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Catamaran:wght@600&display=swap"
       rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Real Trust Page</title>
+    <title>Free Drone Page</title>
   </head>
   <body>
     <div id="root"></div>
