Changes to Marketing

--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/png"
-      href="https://res.cloudinary.com/djzp2k8gd/image/upload/v1714055816/drone_landing/logo/zl3kehgakmqi9icgnb6o.png"
-    />
+    <link rel="icon" type="image/svg" href="LogoBlanco.svg" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
@@ -16,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Free Drone Page</title>
+    <title>AeroAutonomyInnovations</title>
   </head>
   <body>
     <div id="root"></div>
