--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AeroAutonomyInnovations</title>
+    <title>Techdronfly</title>
   </head>
   <body>
     <div id="root"></div>
